src/main/CSlang/parser/.antlr/CSlangParser.java
// Generated from e:/231/PPL/Assignment/Assignment3/initial/src/main/CSlang/parser/CSlang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CSlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ZERO=2, DIGIT=3, FLOATLIT=4, BOOLIT=5, STRINGLIT=6, CONST_VAR=7, 
		LP=8, RP=9, LCURB=10, RCURB=11, LSQAB=12, RSQAB=13, DOT=14, COMMA=15, 
		SEMI=16, COLON=17, ADD=18, SUBTRAC=19, MULTI=20, DIVID=21, BSLASH=22, 
		NOT=23, AND=24, OR=25, ISEQUAL=26, EQUAL=27, NOTEQUAL=28, LESSTHAN=29, 
		LESSTHANOREQ=30, GREATERTHAN=31, GREATERTHANOREQ=32, ASSIGN=33, STRINGCON=34, 
		MODUL=35, BREAK=36, CONTINUE=37, IF=38, ELSE=39, FOR=40, TRUE=41, FALSE=42, 
		INT=43, FLOAT=44, BOOL=45, STRING=46, RETURN=47, NULL=48, CLASS=49, CONSTRUCTOR=50, 
		VAR=51, SELF=52, NEW=53, VOID=54, CONST=55, FUNC=56, A_ID=57, ID=58, CMSINGLE=59, 
		CMMULTI=60, WS=61, UNCLOSE_STRING=62, ILLEGAL_ESCAPE=63, ERROR_CHAR=64;
	public static final int
		RULE_program = 0, RULE_class_dcl = 1, RULE_class_body = 2, RULE_decls = 3, 
		RULE_decl = 4, RULE_att_decl = 5, RULE_recursion_att = 6, RULE_vari_decl = 7, 
		RULE_method_decl = 8, RULE_constructor_decl = 9, RULE_paramlist = 10, 
		RULE_paramprime = 11, RULE_param = 12, RULE_block_stmt = 13, RULE_stmtlist = 14, 
		RULE_stmt = 15, RULE_asm_stmt = 16, RULE_var_stmt = 17, RULE_recursion_vari = 18, 
		RULE_continue_stmt = 19, RULE_break_stmt = 20, RULE_return_stmt = 21, 
		RULE_call_stmt = 22, RULE_if_stmt = 23, RULE_preblock_stmt = 24, RULE_for_stmt = 25, 
		RULE_init_stmt = 26, RULE_condition_expr = 27, RULE_post_stmt = 28, RULE_expr = 29, 
		RULE_expr1 = 30, RULE_expr2 = 31, RULE_expr3 = 32, RULE_expr4 = 33, RULE_expr5 = 34, 
		RULE_expr6 = 35, RULE_expr7 = 36, RULE_expr8 = 37, RULE_expr9 = 38, RULE_expr10 = 39, 
		RULE_expr11 = 40, RULE_subexpr = 41, RULE_data_type_decl = 42, RULE_data_type = 43, 
		RULE_array_type = 44, RULE_array_data_type_decl = 45, RULE_super_idlist = 46, 
		RULE_idlist = 47, RULE_empty_exprlist = 48, RULE_exprprime = 49, RULE_lit = 50, 
		RULE_arraylit = 51, RULE_array_decl = 52, RULE_array_int = 53, RULE_array_float = 54, 
		RULE_array_bool = 55, RULE_array_string = 56, RULE_intlit = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_dcl", "class_body", "decls", "decl", "att_decl", "recursion_att", 
			"vari_decl", "method_decl", "constructor_decl", "paramlist", "paramprime", 
			"param", "block_stmt", "stmtlist", "stmt", "asm_stmt", "var_stmt", "recursion_vari", 
			"continue_stmt", "break_stmt", "return_stmt", "call_stmt", "if_stmt", 
			"preblock_stmt", "for_stmt", "init_stmt", "condition_expr", "post_stmt", 
			"expr", "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
			"expr8", "expr9", "expr10", "expr11", "subexpr", "data_type_decl", "data_type", 
			"array_type", "array_data_type_decl", "super_idlist", "idlist", "empty_exprlist", 
			"exprprime", "lit", "arraylit", "array_decl", "array_int", "array_float", 
			"array_bool", "array_string", "intlit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<-'", null, null, null, null, null, null, "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'.'", "','", "';'", "':'", "'+'", "'-'", "'*'", 
			"'/'", "'\\'", "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "':='", "'^'", "'%'", "'break'", "'continue'", "'if'", 
			"'else'", "'for'", "'true'", "'false'", "'int'", "'float'", "'bool'", 
			"'string'", "'return'", "'null'", "'class'", "'constructor'", "'var'", 
			"'self'", "'new'", "'void'", "'const'", "'func'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ZERO", "DIGIT", "FLOATLIT", "BOOLIT", "STRINGLIT", "CONST_VAR", 
			"LP", "RP", "LCURB", "RCURB", "LSQAB", "RSQAB", "DOT", "COMMA", "SEMI", 
			"COLON", "ADD", "SUBTRAC", "MULTI", "DIVID", "BSLASH", "NOT", "AND", 
			"OR", "ISEQUAL", "EQUAL", "NOTEQUAL", "LESSTHAN", "LESSTHANOREQ", "GREATERTHAN", 
			"GREATERTHANOREQ", "ASSIGN", "STRINGCON", "MODUL", "BREAK", "CONTINUE", 
			"IF", "ELSE", "FOR", "TRUE", "FALSE", "INT", "FLOAT", "BOOL", "STRING", 
			"RETURN", "NULL", "CLASS", "CONSTRUCTOR", "VAR", "SELF", "NEW", "VOID", 
			"CONST", "FUNC", "A_ID", "ID", "CMSINGLE", "CMMULTI", "WS", "UNCLOSE_STRING", 
			"ILLEGAL_ESCAPE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CSlang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CSlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CSlangParser.EOF, 0); }
		public List<Class_dclContext> class_dcl() {
			return getRuleContexts(Class_dclContext.class);
		}
		public Class_dclContext class_dcl(int i) {
			return getRuleContext(Class_dclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				class_dcl();
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_dclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(CSlangParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(CSlangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CSlangParser.ID, i);
		}
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public Class_dclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_dcl; }
	}

	public final Class_dclContext class_dcl() throws RecognitionException {
		Class_dclContext _localctx = new Class_dclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(CLASS);
			setState(124);
			match(ID);
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(125);
				match(T__0);
				setState(126);
				match(ID);
				}
				break;
			case LCURB:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(130);
			class_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_bodyContext extends ParserRuleContext {
		public TerminalNode LCURB() { return getToken(CSlangParser.LCURB, 0); }
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public TerminalNode RCURB() { return getToken(CSlangParser.RCURB, 0); }
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(LCURB);
			setState(133);
			decls();
			setState(134);
			match(RCURB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclsContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decls);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST_VAR:
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				decl();
				setState(137);
				decls();
				}
				break;
			case RCURB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public Att_declContext att_decl() {
			return getRuleContext(Att_declContext.class,0);
		}
		public Constructor_declContext constructor_decl() {
			return getRuleContext(Constructor_declContext.class,0);
		}
		public Method_declContext method_decl() {
			return getRuleContext(Method_declContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decl);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				att_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				constructor_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				method_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Att_declContext extends ParserRuleContext {
		public TerminalNode CONST_VAR() { return getToken(CSlangParser.CONST_VAR, 0); }
		public Super_idlistContext super_idlist() {
			return getRuleContext(Super_idlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Data_type_declContext data_type_decl() {
			return getRuleContext(Data_type_declContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CSlangParser.SEMI, 0); }
		public Recursion_attContext recursion_att() {
			return getRuleContext(Recursion_attContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(CSlangParser.ID, 0); }
		public TerminalNode A_ID() { return getToken(CSlangParser.A_ID, 0); }
		public Att_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_att_decl; }
	}

	public final Att_declContext att_decl() throws RecognitionException {
		Att_declContext _localctx = new Att_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_att_decl);
		int _la;
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(147);
				match(CONST_VAR);
				setState(148);
				super_idlist();
				setState(149);
				match(COLON);
				setState(150);
				data_type_decl();
				setState(151);
				match(SEMI);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(153);
				match(CONST_VAR);
				setState(154);
				_la = _input.LA(1);
				if ( !(_la==A_ID || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(155);
				recursion_att();
				setState(156);
				expr();
				setState(157);
				match(SEMI);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Recursion_attContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(CSlangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CSlangParser.COMMA, i);
		}
		public Recursion_attContext recursion_att() {
			return getRuleContext(Recursion_attContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(CSlangParser.ID, 0); }
		public TerminalNode A_ID() { return getToken(CSlangParser.A_ID, 0); }
		public Vari_declContext vari_decl() {
			return getRuleContext(Vari_declContext.class,0);
		}
		public Recursion_attContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursion_att; }
	}

	public final Recursion_attContext recursion_att() throws RecognitionException {
		Recursion_attContext _localctx = new Recursion_attContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recursion_att);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(COMMA);
				setState(162);
				_la = _input.LA(1);
				if ( !(_la==A_ID || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(163);
				recursion_att();
				setState(164);
				expr();
				setState(165);
				match(COMMA);
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				vari_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vari_declContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Data_type_declContext data_type_decl() {
			return getRuleContext(Data_type_declContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(CSlangParser.EQUAL, 0); }
		public Vari_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vari_decl; }
	}

	public final Vari_declContext vari_decl() throws RecognitionException {
		Vari_declContext _localctx = new Vari_declContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vari_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(COLON);
			setState(171);
			data_type_decl();
			setState(172);
			match(EQUAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_declContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(CSlangParser.FUNC, 0); }
		public TerminalNode LP() { return getToken(CSlangParser.LP, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RP() { return getToken(CSlangParser.RP, 0); }
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Block_stmtContext block_stmt() {
			return getRuleContext(Block_stmtContext.class,0);
		}
		public TerminalNode ID() { return getToken(CSlangParser.ID, 0); }
		public TerminalNode A_ID() { return getToken(CSlangParser.A_ID, 0); }
		public Method_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_decl; }
	}

	public final Method_declContext method_decl() throws RecognitionException {
		Method_declContext _localctx = new Method_declContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_method_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(FUNC);
			setState(175);
			_la = _input.LA(1);
			if ( !(_la==A_ID || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(176);
			match(LP);
			setState(177);
			paramlist();
			setState(178);
			match(RP);
			setState(179);
			match(COLON);
			setState(180);
			data_type();
			setState(181);
			block_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Constructor_declContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(CSlangParser.FUNC, 0); }
		public TerminalNode CONSTRUCTOR() { return getToken(CSlangParser.CONSTRUCTOR, 0); }
		public TerminalNode LP() { return getToken(CSlangParser.LP, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RP() { return getToken(CSlangParser.RP, 0); }
		public Block_stmtContext block_stmt() {
			return getRuleContext(Block_stmtContext.class,0);
		}
		public Constructor_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor_decl; }
	}

	public final Constructor_declContext constructor_decl() throws RecognitionException {
		Constructor_declContext _localctx = new Constructor_declContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constructor_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(FUNC);
			setState(184);
			match(CONSTRUCTOR);
			setState(185);
			match(LP);
			setState(186);
			paramlist();
			setState(187);
			match(RP);
			setState(188);
			block_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamlistContext extends ParserRuleContext {
		public ParamprimeContext paramprime() {
			return getRuleContext(ParamprimeContext.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramlist);
		try {
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				paramprime();
				}
				break;
			case RP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamprimeContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(CSlangParser.COMMA, 0); }
		public ParamprimeContext paramprime() {
			return getRuleContext(ParamprimeContext.class,0);
		}
		public ParamprimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramprime; }
	}

	public final ParamprimeContext paramprime() throws RecognitionException {
		ParamprimeContext _localctx = new ParamprimeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_paramprime);
		try {
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(194);
				param();
				setState(195);
				match(COMMA);
				setState(196);
				paramprime();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				param();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Data_type_declContext data_type_decl() {
			return getRuleContext(Data_type_declContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			idlist();
			setState(202);
			match(COLON);
			setState(203);
			data_type_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Block_stmtContext extends ParserRuleContext {
		public TerminalNode LCURB() { return getToken(CSlangParser.LCURB, 0); }
		public StmtlistContext stmtlist() {
			return getRuleContext(StmtlistContext.class,0);
		}
		public TerminalNode RCURB() { return getToken(CSlangParser.RCURB, 0); }
		public Block_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_stmt; }
	}
